fixing container alignment

--- a/src/components/PomodoroTimer/styles.css
+++ b/src/components/PomodoroTimer/styles.css
@@ -5,8 +5,8 @@
 	padding: 3.6rem;
 	row-gap: 2.4rem;
 	border-radius: 8px;
-	max-width: 50vh;
-	margin: auto;
+	max-width: 60rem;
+	margin: 0 auto;
 }
 
 button {
